--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 	<h1>Чингизхан Абишев </h1>
 <h1 class="title">это моя страница</h1>
-<img src="Vy4vWNqZ82c.jpg" width="350" height="350"> 
+<img src="4bbnvTX8fro.jpg" width="350" height="350"> 
 <h2>мои любимые книги</h2>
 <ul>
 	<li>портрет Дориана Грей</li>
